# gercom_fedt-distributed

./: .gitignore  README.md  pyproject.toml
fedt/: cli.py  client.py  client_utils.py  config.toml  fedforest.py  run_clients.py  server.py  settings.py  utils.py
scripts/: cpu_and_ram_monitor.py  network_monitor  network_monitor.py  pcap_filter  pcap_filter.py  unify_results.py
